generated/MariaDBDDLParser.cpp

// Generated from MariaDBDDLParser.g4 by ANTLR 4.13.2


#include "MariaDBDDLParserVisitor.h"

#include "MariaDBDDLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MariaDBDDLParserStaticData final {
  MariaDBDDLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MariaDBDDLParserStaticData(const MariaDBDDLParserStaticData&) = delete;
  MariaDBDDLParserStaticData(MariaDBDDLParserStaticData&&) = delete;
  MariaDBDDLParserStaticData& operator=(const MariaDBDDLParserStaticData&) = delete;
  MariaDBDDLParserStaticData& operator=(MariaDBDDLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mariadbddlparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MariaDBDDLParserStaticData> mariadbddlparserParserStaticData = nullptr;

void mariadbddlparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mariadbddlparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(mariadbddlparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MariaDBDDLParserStaticData>(
    std::vector<std::string>{
      "script", "statement", "createTable", "ifNotExists", "tableElement", 
      "columnDefinition", "columnModifier", "defaultValue", "dataType", 
      "intType", "typeDimension", "typePrecision", "enumValues", "tableConstraint", 
      "constraintName", "indexName", "indexColumnNames", "referenceActions", 
      "onDelete", "onUpdate", "referenceAction", "tableOptions", "tableOption", 
      "dropTable", "ifExists", "createIndex", "dropIndex", "alterTable", 
      "alterAction", "createDatabase", "useDatabase", "setStatement", "lockStatement", 
      "unlockStatement", "insertStatement", "expression", "tableName", "columnName", 
      "collationName", "identifier", "nonReservedKeyword"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "'('", "')'", "','", "';'", "'.'", 
      "'='", "'`'"
    },
    std::vector<std::string>{
      "", "ADD", "ALTER", "AUTO_INCREMENT", "BIGINT", "BLOB", "BOOLEAN", 
      "CASCADE", "CHAR", "CHARACTER", "CHARSET", "CHECK", "COLLATE", "COLUMN", 
      "COMMENT", "CONSTRAINT", "CREATE", "DATABASE", "DATE", "DATETIME", 
      "DECIMAL", "DEFAULT", "DELETE", "DOUBLE", "DROP", "ENGINE", "ENUM", 
      "EXISTS", "FLOAT", "FOREIGN", "IF", "INDEX", "INSERT", "INT", "INTEGER", 
      "INTO", "JSON", "KEY", "LOCK", "LONGBLOB", "LONGTEXT", "MEDIUMBLOB", 
      "MEDIUMINT", "MEDIUMTEXT", "MODIFY", "NOT", "NULL_", "ON", "PRIMARY", 
      "REFERENCES", "RENAME", "RESTRICT", "SET", "ACTION", "SIGNED", "SMALLINT", 
      "TABLE", "TABLES", "TEXT", "TIME", "TIMESTAMP", "TINYBLOB", "TINYINT", 
      "TINYTEXT", "TO", "UNIQUE", "UNLOCK", "UNSIGNED", "UPDATE", "USE", 
      "VALUES", "VARCHAR", "WRITE", "READ", "ZEROFILL", "NO", "LPAREN", 
      "RPAREN", "COMMA", "SEMI", "DOT", "EQ", "BACKTICK", "STRING_LITERAL", 
      "NUMERIC_LITERAL", "BACKTICK_ID", "ID", "LINE_COMMENT", "BLOCK_COMMENT", 
      "CONDITIONAL_COMMENT", "WS", "ANY"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mariadbddlparserParserStaticData = std::move(staticData);
}

}

MariaDBDDLParser::MariaDBDDLParser(TokenStream *input) : MariaDBDDLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MariaDBDDLParser::MariaDBDDLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MariaDBDDLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mariadbddlparserParserStaticData->atn, mariadbddlparserParserStaticData->decisionToDFA, mariadbddlparserParserStaticData->sharedContextCache, options);
}

MariaDBDDLParser::~MariaDBDDLParser() {
  delete _interpreter;
}

const atn::ATN& MariaDBDDLParser::getATN() const {
  return *mariadbddlparserParserStaticData->atn;
}

std::string MariaDBDDLParser::getGrammarFileName() const {
  return "MariaDBDDLParser.g4";
}

const std::vector<std::string>& MariaDBDDLParser::getRuleNames() const {
  return mariadbddlparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& MariaDBDDLParser::getVocabulary() const {
  return mariadbddlparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MariaDBDDLParser::getSerializedATN() const {
  return mariadbddlparserParserStaticData->serializedATN;
}


//----------------- ScriptContext ------------------------------------------------------------------

MariaDBDDLParser::ScriptContext::ScriptContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MariaDBDDLParser::ScriptContext::EOF() {
  return getToken(MariaDBDDLParser::EOF, 0);
}

std::vector<MariaDBDDLParser::StatementContext *> MariaDBDDLParser::ScriptContext::statement() {
  return getRuleContexts<MariaDBDDLParser::StatementContext>();
}

MariaDBDDLParser::StatementContext* MariaDBDDLParser::ScriptContext::statement(size_t i) {
  return getRuleContext<MariaDBDDLParser::StatementContext>(i);
}


size_t MariaDBDDLParser::ScriptContext::getRuleIndex() const {
  return MariaDBDDLParser::RuleScript;
}


std::any MariaDBDDLParser::ScriptContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MariaDBDDLParserVisitor*>(visitor))
    return parserVisitor->visitScript(this);
  else
    return visitor->visitChildren(this);
}

MariaDBDDLParser::ScriptContext* MariaDBDDLParser::script() {
  ScriptContext *_localctx = _tracker.createInstance<ScriptContext>(_ctx, getState());
  enterRule(_localctx, 0, MariaDBDDLParser::RuleScript);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4503878817087492) != 0) || ((((_la - 66) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 66)) & 8201) != 0)) {
      setState(82);
      statement();
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(88);
    match(MariaDBDDLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MariaDBDDLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MariaDBDDLParser::CreateTableContext* MariaDBDDLParser::StatementContext::createTable() {
  return getRuleContext<MariaDBDDLParser::CreateTableContext>(0);
}

tree::TerminalNode* MariaDBDDLParser::StatementContext::SEMI() {
  return getToken(MariaDBDDLParser::SEMI, 0);
}

MariaDBDDLParser::DropTableContext* MariaDBDDLParser::StatementContext::dropTable() {
  return getRuleContext<MariaDBDDLParser::DropTableContext>(0);
}

MariaDBDDLParser::CreateIndexContext* MariaDBDDLParser::StatementContext::createIndex() {
  return getRuleContext<MariaDBDDLParser::CreateIndexContext>(0);
}

MariaDBDDLParser::DropIndexContext* MariaDBDDLParser::StatementContext::dropIndex() {
  return getRuleContext<MariaDBDDLParser::DropIndexContext>(0);
}

MariaDBDDLParser::AlterTableContext* MariaDBDDLParser::StatementContext::alterTable() {
  return getRuleContext<MariaDBDDLParser::AlterTableContext>(0);
}

MariaDBDDLParser::CreateDatabaseContext* MariaDBDDLParser::StatementContext::createDatabase() {
  return getRuleContext<MariaDBDDLParser::CreateDatabaseContext>(0);
}

MariaDBDDLParser::UseDatabaseContext* MariaDBDDLParser::StatementContext::useDatabase() {
  return getRuleContext<MariaDBDDLParser::UseDatabaseContext>(0);
}

MariaDBDDLParser::SetStatementContext* MariaDBDDLParser::StatementContext::setStatement() {
  return getRuleContext<MariaDBDDLParser::SetStatementContext>(0);
}

MariaDBDDLParser::LockStatementContext* MariaDBDDLParser::StatementContext::lockStatement() {
  return getRuleContext<MariaDBDDLParser::LockStatementContext>(0);
}

MariaDBDDLParser::UnlockStatementContext* MariaDBDDLParser::StatementContext::unlockStatement() {
  return getRuleContext<MariaDBDDLParser::UnlockStatementContext>(0);
}

MariaDBDDLParser::InsertStatementContext* MariaDBDDLParser::StatementContext::insertStatement() {
  return getRuleContext<MariaDBDDLParser::InsertStatementContext>(0);
}


size_t MariaDBDDLParser::StatementContext::getRuleIndex() const {
  return MariaDBDDLParser::RuleStatement;
}


std::any MariaDBDDLParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MariaDBDDLParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

MariaDBDDLParser::StatementContext* MariaDBDDLParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, MariaDBDDLParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(124);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(90);
      createTable();
      setState(91);
      match(MariaDBDDLParser::SEMI);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(93);
      dropTable();
      setState(94);
      match(MariaDBDDLParser::SEMI);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(96);
      createIndex();
      setState(97);
      match(MariaDBDDLParser::SEMI);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(99);
      dropIndex();
      setState(100);
      match(MariaDBDDLParser::SEMI);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(102);
      alterTable();
      setState(103);
      match(MariaDBDDLParser::SEMI);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(105);
      createDatabase();
      setState(106);
      match(MariaDBDDLParser::SEMI);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(108);
      useDatabase();
      setState(109);
      match(MariaDBDDLParser::SEMI);
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(111);
      setStatement();
      setState(112);
      match(MariaDBDDLParser::SEMI);
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(114);
      lockStatement();
      setState(115);
      match(MariaDBDDLParser::SEMI);
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(117);
      unlockStatement();
      setState(118);
      match(MariaDBDDLParser::SEMI);
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(120);
      insertStatement();
      setState(121);
      match(MariaDBDDLParser::SEMI);
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(123);
      match(MariaDBDDLParser::SEMI);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateTableContext ------------------------------------------------------------------

MariaDBDDLParser::CreateTableContext::CreateTableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MariaDBDDLParser::CreateTableContext::CREATE() {
  return getToken(MariaDBDDLParser::CREATE, 0);
}

tree::TerminalNode* MariaDBDDLParser::CreateTableContext::TABLE() {
  return getToken(MariaDBDDLParser::TABLE, 0);
}

MariaDBDDLParser::TableNameContext* MariaDBDDLParser::CreateTableContext::tableName() {
  return getRuleContext<MariaDBDDLParser::TableNameContext>(0);
}

tree::TerminalNode* MariaDBDDLParser::CreateTableContext::LPAREN() {
  return getToken(MariaDBDDLParser::LPAREN, 0);
}

std::vector<MariaDBDDLParser::TableElementContext *> MariaDBDDLParser::CreateTableContext::tableElement() {
  return getRuleContexts<MariaDBDDLParser::TableElementContext>();
}

MariaDBDDLParser::TableElementContext* MariaDBDDLParser::CreateTableContext::tableElement(size_t i) {
  return getRuleContext<MariaDBDDLParser::TableElementContext>(i);
}

tree::TerminalNode* MariaDBDDLParser::CreateTableContext::RPAREN() {
  return getToken(MariaDBDDLParser::RPAREN, 0);
}

MariaDBDDLParser::IfNotExistsContext* MariaDBDDLParser::CreateTableContext::ifNotExists() {
  return getRuleContext<MariaDBDDLParser::IfNotExistsContext>(0);
}

std::vector<tree::TerminalNode *> MariaDBDDLParser::CreateTableContext::COMMA() {
  return getTokens(MariaDBDDLParser::COMMA);
}

tree::TerminalNode* MariaDBDDLParser::CreateTableContext::COMMA(size_t i) {
  return getToken(MariaDBDDLParser::COMMA, i);
}

MariaDBDDLParser::TableOptionsContext* MariaDBDDLParser::CreateTableContext::tableOptions() {
  return getRuleContext<MariaDBDDLParser::TableOptionsContext>(0);
}


size_t MariaDBDDLParser::CreateTableContext::getRuleIndex() const {
  return MariaDBDDLParser::RuleCreateTable;
}


std::any MariaDBDDLParser::CreateTableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MariaDBDDLParserVisitor*>(visitor))
    return parserVisitor->visitCreateTable(this);
  else
    return visitor->visitChildren(this);
}

MariaDBDDLParser::CreateTableContext* MariaDBDDLParser::createTable() {
  CreateTableContext *_localctx = _tracker.createInstance<CreateTableContext>(_ctx, getState());
  enterRule(_localctx, 4, MariaDBDDLParser::RuleCreateTable);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    match(MariaDBDDLParser::CREATE);
    setState(127);
    match(MariaDBDDLParser::TABLE);
    setState(129);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MariaDBDDLParser::IF) {
      setState(128);
      ifNotExists();
    }
    setState(131);
    tableName();
    setState(132);
    match(MariaDBDDLParser::LPAREN);
    setState(133);
    tableElement();
    setState(138);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MariaDBDDLParser::COMMA) {
      setState(134);
      match(MariaDBDDLParser::COMMA);
      setState(135);
      tableElement();
      setState(140);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(141);
    match(MariaDBDDLParser::RPAREN);
    setState(143);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 35673608) != 0)) {
      setState(142);
      tableOptions();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfNotExistsContext ------------------------------------------------------------------

MariaDBDDLParser::IfNotExistsContext::IfNotExistsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MariaDBDDLParser::IfNotExistsContext::IF() {
  return getToken(MariaDBDDLParser::IF, 0);
}

tree::TerminalNode* MariaDBDDLParser::IfNotExistsContext::NOT() {
  return getToken(MariaDBDDLParser::NOT, 0);
}

tree::TerminalNode* MariaDBDDLParser::IfNotExistsContext::EXISTS() {
  return getToken(MariaDBDDLParser::EXISTS, 0);
}


size_t MariaDBDDLParser::IfNotExistsContext::getRuleIndex() const {
  return MariaDBDDLParser::RuleIfNotExists;
}


std::any MariaDBDDLParser::IfNotExistsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MariaDBDDLParserVisitor*>(visitor))
    return parserVisitor->visitIfNotExists(this);
  else
    return visitor->visitChildren(this);
}

MariaDBDDLParser::IfNotExistsContext* MariaDBDDLParser::ifNotExists() {
  IfNotExistsContext *_localctx = _tracker.createInstance<IfNotExistsContext>(_ctx, getState());
  enterRule(_localctx, 6, MariaDBDDLParser::RuleIfNotExists);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(145);
    match(MariaDBDDLParser::IF);
    setState(146);
    match(MariaDBDDLParser::NOT);
    setState(147);
    match(MariaDBDDLParser::EXISTS);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TableElementContext ------------------------------------------------------------------

MariaDBDDLParser::TableElementContext::TableElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MariaDBDDLParser::ColumnDefinitionContext* MariaDBDDLParser::TableElementContext::columnDefinition() {
  return getRuleContext<MariaDBDDLParser::ColumnDefinitionContext>(0);
}

MariaDBDDLParser::TableConstraintContext* MariaDBDDLParser::TableElementContext::tableConstraint() {
  return getRuleContext<MariaDBDDLParser::TableConstraintContext>(0);
}


size_t MariaDBDDLParser::TableElementContext::getRuleIndex() const {
  return MariaDBDDLParser::RuleTableElement;
}


std::any MariaDBDDLParser::TableElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MariaDBDDLParserVisitor*>(visitor))
    return parserVisitor->visitTableElement(this);
  else
    return visitor->visitChildren(this);
}

MariaDBDDLParser::TableElementContext* MariaDBDDLParser::tableElement() {
  TableElementContext *_localctx = _tracker.createInstance<TableElementContext>(_ctx, getState());
  enterRule(_localctx, 8, MariaDBDDLParser::RuleTableElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(151);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(149);
      columnDefinition();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(150);
      tableConstraint();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ColumnDefinitionContext ------------------------------------------------------------------

MariaDBDDLParser::ColumnDefinitionContext::ColumnDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MariaDBDDLParser::ColumnNameContext* MariaDBDDLParser::ColumnDefinitionContext::columnName() {
  return getRuleContext<MariaDBDDLParser::ColumnNameContext>(0);
}

MariaDBDDLParser::DataTypeContext* MariaDBDDLParser::ColumnDefinitionContext::dataType() {
  return getRuleContext<MariaDBDDLParser::DataTypeContext>(0);
}

std::vector<MariaDBDDLParser::ColumnModifierContext *> MariaDBDDLParser::ColumnDefinitionContext::columnModifier() {
  return getRuleContexts<MariaDBDDLParser::ColumnModifierContext>();
}

MariaDBDDLParser::ColumnModifierContext* MariaDBDDLParser::ColumnDefinitionContext::columnModifier(size_t i) {
  return getRuleContext<MariaDBDDLParser::ColumnModifierContext>(i);
}


size_t MariaDBDDLParser::ColumnDefinitionContext::getRuleIndex() const {
  return MariaDBDDLParser::RuleColumnDefinition;
}


std::any MariaDBDDLParser::ColumnDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MariaDBDDLParserVisitor*>(visitor))
    return parserVisitor->visitColumnDefinition(this);
  else
    return visitor->visitChildren(this);
}

MariaDBDDLParser::ColumnDefinitionContext* MariaDBDDLParser::columnDefinition() {
  ColumnDefinitionContext *_localctx = _tracker.createInstance<ColumnDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 10, MariaDBDDLParser::RuleColumnDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(153);
    columnName();
    setState(154);
    dataType();
    setState(158);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 387028095096840) != 0) || ((((_la - 65) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 65)) & 517) != 0)) {
      setState(155);
      columnModifier();
      setState(160);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ColumnModifierContext ------------------------------------------------------------------

MariaDBDDLParser::ColumnModifierContext::ColumnModifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MariaDBDDLParser::ColumnModifierContext::getRuleIndex() const {
  return MariaDBDDLParser::RuleColumnModifier;
}

void MariaDBDDLParser::ColumnModifierContext::copyFrom(ColumnModifierContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- CheckModContext ------------------------------------------------------------------

tree::TerminalNode* MariaDBDDLParser::CheckModContext::CHECK() {
  return getToken(MariaDBDDLParser::CHECK, 0);
}

tree::TerminalNode* MariaDBDDLParser::CheckModContext::LPAREN() {
  return getToken(MariaDBDDLParser::LPAREN, 0);
}

MariaDBDDLParser::ExpressionContext* MariaDBDDLParser::CheckModContext::expression() {
  return getRuleContext<MariaDBDDLParser::ExpressionContext>(0);
}

tree::TerminalNode* MariaDBDDLParser::CheckModContext::RPAREN() {
  return getToken(MariaDBDDLParser::RPAREN, 0);
}

MariaDBDDLParser::CheckModContext::CheckModContext(ColumnModifierContext *ctx) { copyFrom(ctx); }


std::any MariaDBDDLParser::CheckModContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MariaDBDDLParserVisitor*>(visitor))
    return parserVisitor->visitCheckMod(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DefaultValContext ------------------------------------------------------------------

tree::TerminalNode* MariaDBDDLParser::DefaultValContext::DEFAULT() {
  return getToken(MariaDBDDLParser::DEFAULT, 0);
}
